# CPPTemplate

./: CMakeLists.txt  README.md
src/: Core.cpp  Core.h  Libraries.h  ResourceHolder.h  SpriteManager.cpp  SpriteManager.h  cplus.h  main.cpp  parameters.h
src/lib/: cplus.h  imconfig.h  imgui-SFML.cpp  sfmlplus.h
